[gd_scene load_steps=4 format=3 uid="uid://rena001"]

[ext_resource type="Script" uid="uid://bxsunoo5nsmsp" path="res://scripts/combat/arena.gd" id="1_arena_script"]
[ext_resource type="Texture2D" uid="uid://biunekqle4mqi" path="res://assets/maps/bg-field.png" id="2_ikmt8"]

[sub_resource type="Curve2D" id="curve_path"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 50, 360, 0, 0, 0, 0, 200, 360, 0, 0, 0, 0, 400, 200, 0, 0, 0, 0, 600, 200, 0, 0, 0, 0, 800, 400, 0, 0, 0, 0, 1000, 400, 0, 0, 0, 0, 1150, 360)
}
point_count = 7

[node name="Arena" type="Node2D"]
script = ExtResource("1_arena_script")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.15, 0.18, 0.12, 1)

[node name="Bg-field" type="Sprite2D" parent="."]
position = Vector2(671, 339)
scale = Vector2(0.422384, 0.422385)
texture = ExtResource("2_ikmt8")

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("curve_path")

[node name="PlacementGrid" type="Node2D" parent="."]

[node name="Statues" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Crystal" type="Node2D" parent="."]
position = Vector2(1180, 360)

[node name="CrystalSprite" type="Sprite2D" parent="Crystal"]
modulate = Color(0.4, 0.8, 1, 1)
scale = Vector2(2, 2)

[node name="CrystalArea" type="Area2D" parent="Crystal"]

[node name="CrystalCollision" type="CollisionShape2D" parent="Crystal/CrystalArea"]

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(50, 360)

[node name="WaveManager" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
